# VERUM

./: .env.example  .gitignore  Anchor.toml  BASKET-checklist.html  BUILD-SUMMARY.md  COMPLETE-CDP-LOOP.md  Cargo.toml  DEPOSIT_SETUP.md  DEVNET_PROOF.md  FUTURE_EXECUTION_PLAN.md  LICENSE  PRODUCTION_STATUS.md  README.md  README0.1.md  bounty.md  checklist.md  debug-wallet.ts  metadata.json  mint-my-tokens.ts  mint-to-wallets.sh  package-lock.json  package.json  plan-verum.prompt.md  run-dev.sh  setup-tokens.ts  throwaway.json  transfer-tokens.ts  tsconfig.json
app/: .env.example  DEVNET_PROOF.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.old.tsx  App.tsx  AppRedesigned.tsx  LaunchVerumToken.tsx  index.css  index.tsx
app/src/hooks/: useProtocolState.ts  usePythPrices.ts
app/src/utils/: basket-sdk.ts  basket_vault.json  constants.ts
backend/: README-KEEPER.md  package-lock.json  package.json  run-keeper-dry-run.sh
backend/src/services/keeper/: README.md  keeper-bot.ts  logger.ts
chainlink-functions/: rebalance-job.js
cli/: package.json
programs/basket-vault/: Cargo.toml
programs/basket-vault/src/: errors.rs  lib.rs  math.rs  oracle.rs  oracle_aggregator.rs  sss_interface.rs  state.rs  svs_interface.rs
programs/basket-vault/src/instructions/: emergency.rs  initialize.rs  liquidate.rs  liquidate_position.rs  mint_basket.rs  mod.rs  rebalance_weights.rs  redeem_basket.rs
recode/recode/basket-frontend/: index.html
recode/recode/basket-frontend/src/utils/: basket-sdk.ts
recode/recode/basket-protocol-complete/basket-protocol/: Anchor.toml  SETUP.md  package.json  tsconfig.json
recode/recode/basket-protocol-complete/basket-protocol/app/: index.html  package.json
recode/recode/basket-protocol-complete/basket-protocol/app/src/: App.tsx
recode/recode/basket-protocol-complete/basket-protocol/app/src/hooks/: useProtocolState.ts
recode/recode/basket-protocol-complete/basket-protocol/app/src/utils/: basket-sdk.ts  constants.ts
recode/recode/basket-protocol-complete/basket-protocol/programs/basket-vault/: Cargo.toml
recode/recode/basket-protocol-complete/basket-protocol/programs/basket-vault/src/: errors.rs  lib.rs  oracle.rs  state.rs
recode/recode/basket-protocol-complete/basket-protocol/programs/basket-vault/src/instructions/: mint_basket.rs  mod.rs  redeem_basket.rs
recode/recode/basket-protocol-complete/basket-protocol/scripts/: deploy.ts  init-vaults.ts
recode/recode/basket-protocol-complete/basket-protocol/tests/: basket-vault.ts
recode/recode/basket-vault-program/basket-vault/: README.md
recode/recode/basket-vault-program/basket-vault/chainlink-functions/: rebalance-job.js
recode/recode/basket-vault-program/basket-vault/programs/basket-vault/: Cargo.toml
recode/recode/basket-vault-program/basket-vault/programs/basket-vault/src/: cpi_interface.rs  errors.rs  lib.rs  oracle.rs  oracle_aggregator.rs  state.rs
recode/recode/basket-vault-program/basket-vault/programs/basket-vault/src/instructions/: deposit_collateral.rs  emergency.rs  init_collateral_vault.rs  initialize.rs  mint_basket.rs  mod.rs  rebalance_weights.rs  withdraw_collateral.rs
recode/recode/files/: ResilientStablecoin.sol  TESTING_FRAMEWORK.md  resilient_stablecoin_spec.md
recode/sss-transfer-hook/: Cargo.toml
scripts/: deploy.ts  init-vaults.ts  temp.ts
tests/: basket-vault-smoke.ts  basket-vault.ts  helpers.ts
verum/programs/verum/src/: error.rs  lib.rs  state.rs
verum/programs/verum/src/instructions/: initialize.rs
