[package]
name = "basket-vault"
version = "0.1.0"
edition = "2021"
description = "VERUM: Resilient Multi-Asset Stablecoin Protocol on Solana"
authors = ["VERUM Team"]
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "basket_vault"

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true, features = ["token"] }
spl-token = { version = "=5.0.2", features = ["no-entrypoint"] }
spl-memo = { version = "=6.0.0", features = ["no-entrypoint"] }

# Oracle integrations
borsh = "1.6"

# Math & utilities
num-traits = "0.2"
bytemuck = { version = "1.14", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []
