[package]
name = "sss-transfer-hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_transfer_hook"

[dependencies]
anchor-lang = "0.29"
anchor-spl = { version = "0.29", features = ["token_2022"] }
spl-token-2022 = "5.0"
spl-transfer-hook-interface = "0.7"
spl-tlv-account-resolution = "0.9"
sss-common = { path = "../../modules/sss-common" }

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []
