[package]
name    = "basket-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "basket_vault"

[features]
no-entrypoint   = []
no-idl          = []
no-log-ix-name  = []
cpi             = ["no-entrypoint"]
default         = []

[dependencies]
anchor-lang              = { version = "0.30", features = ["init-if-needed"] }
anchor-spl               = { version = "0.30", features = ["token"] }
pyth-solana-receiver-sdk = "0.3"
switchboard-solana       = "0.28"
